bahmni-docker/k8s/openmrs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openmrs-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/openmrs)$ /$2/ redirect;
spec:
  rules:
    - host: bahmni.k8s
      http:
        paths:
          - path: /openmrs(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: openmrs
                port:
                  number: 8080
